src/test/resources/invalid/superAfterStatementConstructor/superAfterStatement.vas
class Main is
    this(a: Integer) is
    end
end

class A extends Main is

    var b: Integer

    this(a: Integer) is
        b = a
        super(a)
    end
end